Thu Apr 20 16:23:23 1995  Theodore Y. Ts'o  (tytso@dcl)

	* mk_req.c (krb5_mk_req): Use krb5_sname_to_principal() in order
		to create the service principal from the service and
		hostname pair.  This allows for the host cannoncialization
		to work correctly.

	* mk_req_ext.c (krb5_mk_req_extended): Revamp checksum handling
		code so that no checksum is performed in in_data is NULL,
		and the special case handing of cksumtype == 0x8003 for
		the GSSAPI library is handled correctly.

Wed Apr 19 13:39:34 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* init_ctx.c: (krb5_init_context) initialize context default
		realm. (krb5_free_context) free default realm.

Fri Apr 14 15:05:51 1995    <tytso@rsx-11.mit.edu>

	* sendauth.c (krb5_sendauth): initialize error return parameter

	* copy_princ.c (krb5_copy_principal): Fix bug where
		krb5_copy_principal can fail if it is asked to copy a
		principal with a zero-length component on a system where
		malloc(0) returns null. 

Thu Apr 13 15:49:16 1995 Keith Vetter (keithv@fusion.com)

	* *.[ch]: removed unneeded INTERFACE from non-api functions.

Fri Mar 31 16:45:47 1995 Keith Vetter (keithv@fusion.com)

	* krb5_get_in_tkt: changed error return value for when clocks
           are out of skew to be KRB5_KDCREP_SKEW.

Fri Mar 31 00:44:26 1995  Theodore Y. Ts'o  (tytso@dcl)

	* rd_req.c (krb5_rd_req): Fix typo which caused new_keytab to not
		get freed, causing a memory leak.

Thu Mar 30 15:49:27 1995 Keith Vetter (keithv@fusion.com)

	* rd_req.c: removed unused local variable.

Tue Mar 28 18:34:20 1995  John Gilmore  (gnu at toad.com)

	* rd_req_sim.c:  Really remove the file.

Mon Mar 27 08:34:49 1995 Chris Provenzano (proven@mit.edu)

	* Makefile.in: Removed rd_req_sim.c

	* auth_con.c: Default cksumtype is now CKSUMTYPE_RSA_MD4_DES.

	* auth_con.c: Added krb5_auth_con_setuseruserkey(), 
		krb5_auth_con_getkey(), 
		krb5_auth_con_getremotesubkey(),
		krb5_auth_con_getauthenticator(), 
		krb5_auth_con_getremoteseqnumber(),