@@ -36,7 +36,11 @@ krb5_address **outad;
 
     if (!(tmpad = (krb5_address *)malloc(sizeof(*tmpad))))
 	return ENOMEM;
+#ifdef HAVE_C_STRUCTURE_ASSIGNMENT
     *tmpad = *inad;
+#else
+    memcpy(tmpad, inad, sizeof(krb5_address));
+#endif
     if (!(tmpad->contents = (krb5_octet *)malloc(inad->length))) {
 	krb5_xfree(tmpad);
 	return ENOMEM;
