@@ -43,7 +43,11 @@ krb5_copy_creds(context, incred, outcred)
     if (!(tempcred = (krb5_creds *)malloc(sizeof(*tempcred))))
 	return ENOMEM;
 
+#ifdef HAVE_C_STRUCTURE_ASSIGNMENT
     *tempcred = *incred;		/* copy everything quickly */
+#else
+    memcpy(tempcred, incred, sizeof(krb5_creds));
+#endif
     retval = krb5_copy_principal(context, incred->client, &tempcred->client);
     if (retval)
 	goto cleanlast;
