@@ -221,7 +221,12 @@ krb5_mk_req_extended(context, auth_context, ap_req_options, in_data, in_creds,
     if (retval = encode_krb5_ap_req(&request, &toutbuf))
 	goto cleanup_cksum;
     
+#ifdef HAVE_C_STRUCTURE_ASSIGNMENT
     *outbuf = *toutbuf;
+#else
+    memcpy(outbuf, toutbuf, sizeof(krb5_data));
+#endif
+
     krb5_xfree(toutbuf);
 
 cleanup_cksum:
